--- a/assests/style.css
+++ b/assests/style.css
@@ -216,8 +216,25 @@ body {
     border: 0 none;
   }
   
-  @media screen and (max-width: 980px) {
-  
-  
-    
-  }
+  @media only screen and (max-width: 640px) and (max-width: 767px) {
+    #content, #header-name, #header-navigation, #header-container {
+      width: 100%;
+    }
+   
+    #header {
+      height: auto;
+    }
+   }
+   
+   @media only screen and (min-width: 768px) and (max-width: 979px) {
+    #content, #header-container {
+      width: 100%;
+    }
+   
+   }
+   
+   @media only screen and (min-width: 980px) {
+    #content {
+      width: 600px;
+    }
+   }
